Further developing page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -6,9 +6,23 @@ date: 2021-03-19
 
 # Reynaldo Jarro
 
-Hey, I'm a Computer Science/Business Administration 2024 graduate from the University of Southern California. I am very passionate about both Software Engineering and Cybersecurity.
+Hey, I'm a Computer Science/Business Administration 2024 graduate from the University of Southern California. I am very passionate about both Software Engineering and Cybersecurity. I am working towards some certifications such as Sec+, AWS Security, and TCM Security's PNPT.
 
-I have used a variety of programming languages, frameworks, software, and tools throughout the years to complete projects. Currently I am working on two projects: Kalao, a LLM Chatbot that uses RAG
+I have used a variety of programming languages, frameworks, software, and tools throughout the years to complete projects. Currently, I am working on two projects: Kalao, a LLM Chatbot that uses RAG
+based on results from nmap scans and API calls from NIST and exploitdb to identify exploitable ports or systems in the network, and also working on a website to track card collection progress
+for a specific TCG called Chaotic that has a very niche community, at the moment I am working on wrapping up the public API for card image and information.
+
+## Work Experience
+
+yapping
+
+## Projects
+
+# Kalao
+
+# Card Collection Tracker
+
+#
 
 ---
 
