Testing hashtags in MDX

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,15 +12,15 @@ I have used a variety of programming languages, frameworks, software, and tools 
 based on results from nmap scans and API calls from NIST and exploitdb to identify exploitable ports or systems in the network, and also working on a website to track card collection progress
 for a specific TCG called Chaotic that has a very niche community, at the moment I am working on wrapping up the public API for card image and information.
 
-## Work Experience
+### Work Experience
 
 yapping
 
 ## Projects
 
-# Kalao
+## Kalao
 
-# Card Collection Tracker
+## Card Collection Tracker
 
 #
 
