Hashtag testing has been completed. Committing different sections now.

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -14,15 +14,25 @@ for a specific TCG called Chaotic that has a very niche community, at the moment
 
 ## Work Experience
 
-yapping
+### Amazon - Software Engineer Intern
 
-## Projects
+## Projects - Cybersecurity
 
 ### Kalao
 
+### Bug Bounty
+
+### CTF Activity
+
+## Projects - Software Engineering
+
 ### Card Collection Tracker
 
-#
+### Automated CRUD AWS
+
+### The Movie Database-esque Website
+
+### NFL Wordle
 
 ---
 
