Completed Work Experience Section and Currently working on

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -12,9 +12,28 @@ I have used a variety of programming languages, frameworks, software, and tools 
 based on results from nmap scans and API calls from NIST and exploitdb to identify exploitable ports or systems in the network, and also working on a website to track card collection progress
 for a specific TCG called Chaotic that has a very niche community, at the moment I am working on wrapping up the public API for card image and information.
 
+## Currently Working On
+
+Here is some of the things I am working on at the moment:
+
+● Learning Go, Ansible, Terraform, and becoming better at Kubernetes
+● Getting some CyberSecurity certificates such as Sec+, PNPT, and AWS Security
+● Working on my own home-lab for networking, pentesting, and infrastructure practice
+● Working on both Kalao and the Card Collection Tracker
+
 ## Work Experience
 
-### Amazon - Software Engineer Intern
+### Amazon - Software Engineer Intern (Seattle, WA May 2023 - August 2023)
+● Developed several design documents focusing on high & low level implementation details; managed each implementation
+throughout its entire lifecycle including planning, development & testing
+● Designed and implemented a scheduled Data Consistency job that would check for consistency across four different data
+sources. The Data Consistency job runs comparisons across all four data sources, one of them being a Kafka event bus,
+(extensible design) to ensure data integrity. If mismatches are discovered, the system will create a detailed report outlining the
+inconsistencies. Additionally, the service will send a copy of the report via SNS and page the on-call engineer
+● Responsible for managing all edge cases and the processes in which each is handled
+● The Data Consistency job will be used for the next year to migrate most of the data in PubTech to newer more definitive
+infrastructure
+● Tech Stack: (AWS S3, CDK, EventBridge, DynamoDB, ECS, SQS, IAM, Lambda, Java, Dagger, JUnit, Kafka)
 
 ## Projects - Cybersecurity
 
@@ -22,7 +41,7 @@ for a specific TCG called Chaotic that has a very niche community, at the moment
 
 ### Bug Bounty
 
-### CTF Activity
+### CTFs
 
 ## Projects - Software Engineering
 
