deleting some stuff

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -61,7 +61,7 @@ checks.
 
 ● I am part of huntr's community, the first AI/ML bug bounty platform, I test ML libraries, chatbots, and frameworks for security issues via a combination of tools such as BurpSuite and MLflow.
 
-● Tech Stack/Tools and Skills:
+● Tech Stack/Tools and Skills: SQL Injection, BurpSuite, IDORs, XSS, MLFlow, Web-Pentesting
 
 ### CTFs
 During my time at USC I participated in two CTF activities, one time as the Red Team Captain and another one as both Blue and Red Team.
@@ -105,6 +105,8 @@ team leveraging the API we created with Postmate
 ● Tech Stack: Java, MySQL, Postmate, Spring Boot, React, HTML/CSS, Docker
 
 ### NFL Wordle
+●
+
 
 ---
 
