adding some more content

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -54,7 +54,7 @@ checks.
 
 ● Users can interact with a chatbot and ask about the overall results, possible targets, open ports, version & exploits
 
-● Tech Stack: Python, oLLaMa, LangChain, nmap, tcpdump, TCP/IP, Bash
+● Tech Stack: Python, oLLaMa, LlamaIndex, nmap, tcpdump, TCP/IP, Bash
 
 ### Bug Bounty
 ● Testing websites with appropriate policies for XSS, IDORs, Information Disclosures, and many other security issues via BurpSuite.
@@ -77,13 +77,27 @@ those CSV files to access the accounts created and send the money to my account 
 crack the encryption to gain points. I helped my team create and apply the hashing protocol to all of our passwords, and then once we received the encrypted passwords of other teams I lead the development of
 scripts for tools such as JohnTheRipper and for Dictionary Attacks.
 
-● Tech Stack/Tools and Skills: nmap, tcpdump, Wireshark, Bash, Python, OpenSSH, SQL Injections, Kali Linux, JohnTheRipper
+● Tech and Skills: nmap, tcpdump, Wireshark, Bash, Python, OpenSSH, SQL Injections, Kali Linux, JohnTheRipper
 
 ### Pentesting Simulation
+● During my Ethical Hacking class were split in groups of two and responsible for trying to hack into two HackTheBox boxes
+idk continue this part ig
+
+●
+
+● Tech and Skills: Metasploit, Windows Exploitation, Linux Exploitation, Privilege Escalation, nmap, Meterpreter
 
 ## Projects - Software Engineering/DevOps
 
 ### Card Collection Tracker
+● Designed the project end-to-end; currently working on wrapping up the REST API
+
+● Deeveloping a website for a small trading card game community in order to track game
+collection & progression; utilized BeautifulSoup with Python to scrape the image of each
+card from the web. The webpage will be hosted in Dreamhost, and data is securely stored in RDS
+& Cloudinary and registration will be handled by AWS Cognito
+
+● Tech Stack:AWS (RDS and Cognito), Python, BeautifulSoup, Express, Node.js, React, PostgreSQL, REST API
 
 ### Automated CRUD AWS
 ● Developed with a group a website for researchers that automates the creation of customizable CRUDs
@@ -105,7 +119,17 @@ team leveraging the API we created with Postmate
 ● Tech Stack: Java, MySQL, Postmate, Spring Boot, React, HTML/CSS, Docker
 
 ### NFL Wordle
-●
+● Lead the development of a wordle inspired website. The game was centered around guessing NFL Players,
+and it also had multiplayer options to play against other users.
+
+● Responsible for the implementation and design of most of the front-end using Bootstrap, CSS, JavaScript, HTML,
+and Figma. THere was a lot of thought put into the design to ensure that users had a good experience interacting
+with the game.
+
+● Collaborated with the backend team as well to develop the parsing of the data returned by the
+API responsible for delivering the NFL Players data. Also helped with the MySQL database architecture.
+
+● Tech Stack: HTML/CSS, Bootstrap, JavaScript, Figma, MySQL
 
 
 ---
