I think I might have finished the page

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,6 +1,6 @@
 ---
 type: page
-title: About
+title: Reynaldo Jarro
 date: 2021-03-19
 ---
 
@@ -43,7 +43,7 @@ inconsistencies. Additionally, the service will send a copy of the report via SN
 ● The Data Consistency job will be used for the next year to migrate most of the data in PubTech to newer more definitive
 infrastructure
 
-● Tech Stack: AWS (S3, CDK, CloudFormation, EventBridge, DynamoDB, ECS, SQS, IAM, and Lambda), Java, Dagger, JUnit, Kafka
+● Tech Stack: AWS (S3, CDK, CloudFormation, EventBridge, DynamoDB, ECS, SQS, IAM, and Lambda), Java, Dagger, JUnit, TypeScript, Apache Kafka
 
 ## Projects - Cybersecurity
 
@@ -80,12 +80,15 @@ scripts for tools such as JohnTheRipper and for Dictionary Attacks.
 ● Tech and Skills: nmap, tcpdump, Wireshark, Bash, Python, OpenSSH, SQL Injections, Kali Linux, JohnTheRipper
 
 ### Pentesting Simulation
-● During my Ethical Hacking class were split in groups of two and responsible for trying to hack into two HackTheBox boxes
-idk continue this part ig
+● During my Ethical Hacking class were split in groups of two and responsible for trying to hack into four HackTheBox boxes.
+Before the pentesting began we had to deliver a plan on what tools, tech, and overall strategies we were planning on using, and after
+that was approved we could start the pentesting.
 
-●
+● In most boxes we used nmap to scan for ports, which most of them had at least one vulnerable port that could be exploited
+. Most of the time we would run the exploits and payloads through Metasploit. Once we had access to the machines we would try
+and get privilege escalation. The boxes had a mix of both linux and Windows OS.
 
-● Tech and Skills: Metasploit, Windows Exploitation, Linux Exploitation, Privilege Escalation, nmap, Meterpreter
+● Tech and Skills: Metasploit, Windows Exploitation, Linux Exploitation, Privilege Escalation, nmap, Meterpreter, Python
 
 ## Projects - Software Engineering/DevOps
 
