--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -95,7 +95,7 @@ and get privilege escalation. The boxes had a mix of both linux and Windows OS.
 ### Card Collection Tracker
 ● Designed the project end-to-end; currently working on wrapping up the REST API
 
-● Deeveloping a website for a small trading card game community in order to track game
+● Developing a website for a small trading card game community in order to track game
 collection & progression; utilized BeautifulSoup with Python to scrape the image of each
 card from the web. The webpage will be hosted in Dreamhost, and data is securely stored in RDS
 & Cloudinary and registration will be handled by AWS Cognito
