--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -9,7 +9,7 @@ date: 2021-03-19
 Hey, I'm a Computer Science/Business Administration 2024 graduate from the University of Southern California. I am very passionate about Software Engineering, Cybersecurity, and DevOps/SRE. I am working towards some certifications such as Sec+, AWS Security, and TCM Security's PNPT.
 
 I have used a variety of programming languages, frameworks, software, and tools throughout the years to complete projects. Currently, I am working on two projects: Kalao, a LLM Chatbot that uses RAG
-based on results from nmap scans and API calls from NIST and exploitdb to identify exploitable ports or systems in the network, and also working on a website to track card collection progress
+based on results from nmap scans and API calls from NIST and SearchSploit for exploitdb to identify exploitable ports or systems in the network, and also working on a website to track card collection progress
 for a specific TCG called Chaotic that has a very niche community, at the moment I am working on wrapping up the public API for card image and information.
 
 ## Currently Working On
@@ -48,18 +48,18 @@ infrastructure
 ## Projects - Cybersecurity
 
 ### Kalao
-● Developing an open source enumeration tool that ingests network traffic from nmap & tcpdump,  parses the data  into CSV files
-and which are later sourced  for locally running LLMs. Also uses both NIST CVE API and exploit-dbs API for CVE and exploitation
-checks.
+● Developed an open source network vulnerability analysis tool that uses nmap & tcpdump,  parses the data  into
+XML files and which are later sourced  for locally running LLMs. Also uses both NIST CVE API and SearchSploit for CVE and
+exploitation checks.
 
 ● Users can interact with a chatbot and ask about the overall results, possible targets, open ports, version & exploits
 
-● Tech Stack: Python, oLLaMa, LlamaIndex, nmap, tcpdump, TCP/IP, Bash
+● Tech Stack: Python, oLLaMa, LlamaIndex, nmap, tcpdump, TCP/IP, Bash, SearchSploit
 
 ### Bug Bounty
 ● Testing websites with appropriate policies for XSS, IDORs, Information Disclosures, and many other security issues via BurpSuite.
 
-● I am part of huntr's community, the first AI/ML bug bounty platform, I test ML libraries, chatbots, and frameworks for security issues via a combination of tools such as BurpSuite and MLflow.
+● I am part of [huntr](huntr.com)'s community, the first AI/ML bug bounty platform, I test ML libraries, chatbots, and frameworks for security issues via a combination of tools such as BurpSuite and MLflow.
 
 ● Tech Stack/Tools and Skills: SQL Injection, BurpSuite, IDORs, XSS, MLFlow, Web-Pentesting
 
@@ -100,7 +100,7 @@ collection & progression; utilized BeautifulSoup with Python to scrape the image
 card from the web. The webpage will be hosted in Dreamhost, and data is securely stored in RDS
 & Cloudinary and registration will be handled by AWS Cognito
 
-● Tech Stack:AWS (RDS and Cognito), Python, BeautifulSoup, Express, Node.js, React, PostgreSQL, REST API
+● Tech Stack: AWS (RDS and Cognito), Python, BeautifulSoup, Express, Node.js, React, PostgreSQL, REST API
 
 ### Automated CRUD AWS
 ● Developed with a group a website for researchers that automates the creation of customizable CRUDs
