--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -48,7 +48,7 @@ infrastructure
 ## Projects - Cybersecurity
 
 ### Kalao
-● Developed an open source network vulnerability analysis tool that uses nmap & tcpdump,  parses the data  into
+● Developing an open source network vulnerability analysis tool that uses nmap & tcpdump,  parses the data  into
 XML files and which are later sourced  for locally running LLMs. Also uses both NIST CVE API and SearchSploit for CVE and
 exploitation checks.
 
