fixed kalao even more

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -48,7 +48,7 @@ infrastructure
 ## Projects - Cybersecurity
 
 ### Kalao
-● Developing an open source network vulnerability analysis tool that uses nmap & tcpdump,  parses the data  into
+● Developing an open source LLM-framework focused on network vulnerability analysis tool for external testing that uses nmap & tcpdump,  parses the data  into
 XML files and which are later sourced  for locally running LLMs. Also uses both NIST CVE API and SearchSploit for CVE and
 exploitation checks.
 
@@ -61,7 +61,7 @@ exploitation checks.
 
 ● I am part of [huntr](huntr.com)'s community, the first AI/ML bug bounty platform, I test ML libraries, chatbots, and frameworks for security issues via a combination of tools such as BurpSuite and MLflow.
 
-● Tech Stack/Tools and Skills: SQL Injection, BurpSuite, IDORs, XSS, MLFlow, Web-Pentesting
+● Tech Stack/Tools and Skills: SQL Injection, BurpSuite, IDORs, XSS, MLFlow, SSRF, Web-Pentesting
 
 ### CTFs
 During my time at USC I participated in two CTF activities, one time as the Red Team Captain and another one as both Blue and Red Team.
